--- a/GithubBrowser/app/src/main/AndroidManifest.xml
+++ b/GithubBrowser/app/src/main/AndroidManifest.xml
@@ -1,12 +1,27 @@
 <manifest package="pl.training.githubbrowser"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".GithubBrowserApplication"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".view.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 
