--- a/GithubBrowser/app/src/main/AndroidManifest.xml
+++ b/GithubBrowser/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".view.RepositoryActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".view.MainActivity"/>
 
     </application>
 
